--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Login to Aliyun Container Registry
       uses: docker/login-action@v2
       with:
-        registry: registry.cn-hangzhou.aliyuncs.com  # 替换为你的阿里云镜像仓库地址
+        registry: registry.ap-southeast-1.aliyuncs.com  # 替换为你的阿里云镜像仓库地址
         username: ${{ secrets.ALIYUN_USERNAME }}  # 阿里云账号
         password: ${{ secrets.ALIYUN_PASSWORD }}  # 阿里云镜像仓库访问密码
 
