--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,12 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-
+    - name: Increment version number
+        id: increment_version
+        run: |
+          python increment_version.py
+          echo "::set-output name=version::$(cat VERSION)"
+          
     # Maven 构建
     - name: Build with Maven
       run: mvn clean package -DskipTests
