--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ "master" ]  # 当 main 分支有推送时触发
+    branches: [ "master" ]  # 当 master 分支有推送时触发
   pull_request:
     branches: [ "master" ]
   workflow_dispatch:  # 允许手动触发
@@ -12,38 +12,46 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    # 设置 JDK 环境
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Increment version number
+      # 设置 JDK 环境
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      # 递增版本号
+      - name: Increment version number
         id: increment_version
         run: |
-          python increment_version.py
-          echo "::set-output name=version::$(cat VERSION)"
-          
-    # Maven 构建
-    - name: Build with Maven
-      run: mvn clean package -DskipTests
+          if [ ! -f VERSION ]; then
+            echo "v1.0" > VERSION
+          fi
+          chmod +x increment_version.py
+          set -e
+          python increment_version.py || { echo "Failed to run increment_version.py"; exit 1; }
+          version=$(cat VERSION | tr -d '[:space:]')
+          echo "::set-output name=version::$version"
 
-    # 登录阿里云容器镜像服务
-    - name: Login to Aliyun Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: registry.ap-southeast-1.aliyuncs.com  # 替换为你的阿里云镜像仓库地址
-        username: ${{ secrets.ALIYUN_USERNAME }}  # 阿里云账号
-        password: ${{ secrets.ALIYUN_PASSWORD }}  # 阿里云镜像仓库访问密码
+      # Maven 构建
+      - name: Build with Maven
+        run: mvn clean package -DskipTests
 
-    # 构建并推送 Docker 镜像
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        tags: |
-          registry.ap-southeast-1.aliyuncs.com/docker_lixun/esshs-java:${{ steps.increment_version.outputs.version }}
+      # 登录阿里云容器镜像服务
+      - name: Login to Aliyun Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: registry.ap-southeast-1.aliyuncs.com  # 替换为你的阿里云镜像仓库地址
+          username: ${{ secrets.ALIYUN_USERNAME }}  # 阿里云账号
+          password: ${{ secrets.ALIYUN_PASSWORD }}  # 阿里云镜像仓库访问密码
+
+      # 构建并推送 Docker 镜像
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: |
+            registry.ap-southeast-1.aliyuncs.com/docker_lixun/esshs-java:${{ steps.increment_version.outputs.version }}
