--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 spring:
   qq:
     username: 3970363733@qq.com
-    password: xxwdfdwzibsscbhi
+    password: wxjyokxvooipceia
     admin:
       - 2315212099@qq.com
       - l3377580541@qq.com
